@@ -1,3 +1,10 @@
+2012-11-07  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[v] Add support for "make installcheck".
+
+	* runtest.in (prefix): Don't set var if already in environment.
+	* Makefile.am (installcheck-local): New target.
+
 2012-04-20  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	Release: 0.44 (tag v0.44)
